03-dep-hpa-ingress/02-nginx-backend-dep-hpa.yaml
# 建立 Nginx Deployment 並掛載 GCE NFS Server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ap-dep-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      tier: backend
  template:
    metadata:
      labels:
        app: nginx
        tier: backend
    spec:
      containers:
        - name: nginx-web
          image: marcoyan0814/nginx-php81
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nfs
              mountPath: "/var/www/html"
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
      volumes:
        - name: nfs
          nfs:
            server: x.x.x.x
            path: /NFS_TEST/BACKEND
