03-dep-hpa-ingress/03-svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-web-frontend-service
spec:
  type: NodePort
  selector:
    app: nginx
    tier: frontend
  externalTrafficPolicy: Local
  ports:
    - port: 80
      targetPort: 80
