03-dep-hpa-ingress/04-svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-web-backend-service
spec:
  type: NodePort
  selector:
    app: nginx
    tier: backend
  externalTrafficPolicy: Local
  ports:
    - port: 80
      targetPort: 80
